--- a/style.css
+++ b/style.css
@@ -61,10 +61,11 @@ body {
 }
 
 .finalResult {
-    background-color: chocolate;
+    background-color: rgb(230, 61, 213);
     text-align: center;
-    margin: 20px -325px 30px 25px;
+    margin: 120px -325px 30px 25px;
     font-size: 36px;
+
 }
 
 .wrapBtn {
@@ -97,4 +98,11 @@ button {
 button:hover {
     background-color: rgb(241, 198, 158);
     font-size: 18px;
+}
+
+h1 {
+    padding: 5px 5px 5px 5px;
+    color: white;
+    font-style: italic;
+    font-size: 36px;
 }
